// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabs/> matches snapshot 1`] = `
<div>
  <section
    class="tabs css-a5ycro-container"
    id="tab-1"
  >
    <nav
      class="css-1cv5t7l-tabsHeader-tabsHeader"
      role="tablist"
    >
      <a
        aria-controls="content-0"
        class="tab-link selected css-1v2oram-tabNavItem-tabNavItem"
        href="#tab-0"
        id="tab-0"
        role="tab"
      >
        Tab 1
      </a>
      <a
        aria-controls="content-1"
        class="tab-link css-1n1jyfz-tabNavItem-tabNavItem"
        href="#tab-1"
        id="tab-1"
        role="tab"
      >
        Tab 2
      </a>
      <a
        aria-controls="content-2"
        class="tab-link css-1n1jyfz-tabNavItem-tabNavItem"
        href="#tab-2"
        id="tab-2"
        role="tab"
      >
        Tab 3
      </a>
    </nav>
    <section
      aria-live="polite"
      id="content"
      role="region"
    >
      <article
        id="content-0"
        role="tabpanel"
      >
        Test tab 1
      </article>
    </section>
  </section>
</div>
`;

exports[`<Tabs/> matches snapshot with stickyHeader 1`] = `
<div>
  <section
    class="css-a5ycro-container"
  >
    <nav
      class="css-1b46b0m-tabsHeader-tabsHeader"
      role="tablist"
    >
      <a
        aria-controls="content-0"
        class="tab-link selected css-1v2oram-tabNavItem-tabNavItem"
        href="#tab-0"
        id="tab-0"
        role="tab"
      >
        Tab 1
      </a>
      <a
        aria-controls="content-1"
        class="tab-link css-1n1jyfz-tabNavItem-tabNavItem"
        href="#tab-1"
        id="tab-1"
        role="tab"
      >
        Tab 2
      </a>
      <a
        aria-controls="content-2"
        class="tab-link css-1n1jyfz-tabNavItem-tabNavItem"
        href="#tab-2"
        id="tab-2"
        role="tab"
      >
        Tab 3
      </a>
    </nav>
    <section
      aria-live="polite"
      id="content"
      role="region"
    >
      <article
        id="content-0"
        role="tabpanel"
      >
        Test tab 1
      </article>
    </section>
  </section>
</div>
`;
